@@ -22,7 +22,7 @@ func TestStacktraceFrameTransform(t *testing.T) {
 	context := "context"
 	fct := "st function"
 	module := "some_module"
-	inApp := true
+	inLibrary := true
 	tests := []struct {
 		StFrame StacktraceFrame
 		Output  common.MapStr
@@ -40,18 +40,18 @@ func TestStacktraceFrameTransform(t *testing.T) {
 				ContextLine: &context,
 				Module:      &module,
 				Function:    &fct,
-				InApp:       &inApp,
+				InLibrary:   &inLibrary,
 				Vars:        map[string]interface{}{"k1": "v1", "k2": "v2"},
 				PreContext:  []string{"prec1", "prec2"},
 				PostContext: []string{"postc1", "postc2"},
 			},
 			Output: common.MapStr{
-				"abs_path": "~/some/abs_path",
-				"filename": "some file",
-				"function": "st function",
-				"module":   "some_module",
-				"in_app":   true,
-				"vars":     common.MapStr{"k1": "v1", "k2": "v2"},
+				"abs_path":      "~/some/abs_path",
+				"filename":      "some file",
+				"function":      "st function",
+				"module":        "some_module",
+				"library_frame": true,
+				"vars":          common.MapStr{"k1": "v1", "k2": "v2"},
 				"context": common.MapStr{
 					"pre":  []string{"prec1", "prec2"},
 					"post": []string{"postc1", "postc2"},
