@@ -123,7 +123,7 @@
                             },
                             "filename": "file/name.py",
                             "function": "foo",
-                            "in_app": false,
+                            "library_frame": true,
                             "line": {
                                 "column": 4,
                                 "context": "line3",
@@ -158,7 +158,7 @@
                             },
                             "filename": "lib/instrumentation/index.js",
                             "function": "instrumented",
-                            "in_app": false,
+                            "library_frame": true,
                             "line": {
                                 "context": "    var result = original.apply(this, arguments)",
                                 "number": 102
@@ -193,7 +193,7 @@
                             },
                             "filename": "file/name.py",
                             "function": "foo",
-                            "in_app": false,
+                            "library_frame": true,
                             "line": {
                                 "column": 4,
                                 "context": "line3",
@@ -228,7 +228,7 @@
                             },
                             "filename": "lib/instrumentation/index.js",
                             "function": "instrumented",
-                            "in_app": false,
+                            "library_frame": true,
                             "line": {
                                 "context": "    var result = original.apply(this, arguments)",
                                 "number": 102
